--- a/css/index.css
+++ b/css/index.css
@@ -93,8 +93,9 @@ ul
 
 p
 {
-  font-family: "Source Sans Pro", Sans-serif;
-  font-size: 16px;
+  font-family: "Source Sans Pro";
+  font-size: 18px;
+  line-height: 2;
   font-style: normal;
 }
 
