--- a/css/BookNest.css
+++ b/css/BookNest.css
@@ -2,6 +2,7 @@ html{
   padding: 10px;
   overflow-x: hidden;
 }
+
 body
 {
   background-color: #f8edeb;
@@ -104,11 +105,18 @@ p
 .researchQues
 {
   color:#026873 ;
-  font-family: "Source Sans Pro", Sans-serif;
+  font-family: "Source Sans Pro";
   font-size: 24px;
   line-height: 40px;
   padding-top: 20px;
   margin-left: 20px;
+}
+
+.User_persona
+{
+  width: 50%;
+  height: auto;
+  
 }
 
 
